little bit of backend

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # API Keys
 apiKeys.js
-
+Backend/.env
 
 # Node modules
 node_modules/
@@ -11,4 +11,4 @@ node_modules/
 
 # OS files
 .DS_Store
-Thumbs.db 
+Thumbs.db
